cree los html solucione errores migre desde la consola etc

--- a/users/templates/listarUsuario.html
+++ b/users/templates/listarUsuario.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    {% for persona in personas %}
+    <li>{{persona.nombre}}</li>
+    {% endfor %}
 </body>
 </html>
