--- a/users/templates/crear_persona.html
+++ b/users/templates/crear_persona.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">Guardar</button>
+    </form>
     
 </body>
 </html>
